# mcp-server-semantic-analysis

./: .gitignore  .services-running.json  CRITICAL-ARCHITECTURE-ISSUES.md  README.md  check-phantom-nodes.cjs  check_dependencies.py  cleanup-phantom-nodes.js  debug-diagram-generation.js  debug-insight-generation.cjs  debug-insight-generation.mjs  debug-llm.js  debug-mcp.js  debug_mcp_agents.py  debug_mcp_integration.py  docs-update-2025-10-25.md  install_system_deps.sh  mcp_server_launcher.py  mcp_venv_wrapper.py  package-lock.json  package.json  pyproject.toml  run_mcp_server.sh  semantic_analysis_server.py  shared-memory-coding.json  simple_mcp_server.py  simple_working_mcp.py  start_mcp_server.sh  test-anthropic.js  test-content-validation.ts  test-e2e-comprehensive.js  test-env.js  test-git-history-standalone.js  test-llm-generation.js  test-ontology-integration.ts  test-plantuml-generation-standalone.js  test-plantuml-validation.js  test-qa-agent-standalone.js  test-semantic-analysis-standalone.js  test-semantic-analyzer.js  test-validation-integration.ts  (+9 more)
agents/: __init__.py  base.py  coordinator.py  deduplication.py  documentation.py  knowledge_graph.py  semantic_analysis.py  synchronization.py  web_search.py
api/: __init__.py  http_server.py  mcp_server.py
config/: __init__.py  agent-tuning.yaml  agent_config.py  agents.yaml  api_keys.py  logging_config.py  model-tiers.yaml  orchestrator.yaml  transcript-formats.json  workflow-runner.yaml
config/workflows/: batch-analysis.yaml  complete-analysis.yaml  incremental-analysis.yaml
docs/: TIERED-MODEL-PROPOSAL.md  configuration.md  troubleshooting.md  ukb-improvement-plan.md  ukb-workflow-features.md
docs/api/: README.md
docs/architecture/: README.md  agents.md  integration.md  tools.md
docs/installation/: README.md
docs/monitoring/: README.md
docs/puml/: _standard-style.puml  agent-coordination-flow.puml  mcp-server-architecture.puml  tool-overview.puml
docs/troubleshooting/: README.md  common-issues.md  performance.md
docs/use-cases/: README.md
scripts/: generate-workflow-puml.ts
semantic_analysis/: __init__.py  cli.py  config.py  core.py
src/: index.ts  knowledge-management  logging.ts  ontology  server.ts  sse-server.ts  stdio-proxy.ts  tools.ts  workflow-runner.ts
src/agents/: base-agent.ts  batch-scheduler.ts  code-graph-agent.ts  content-validation-agent.ts  coordinator.ts  deduplication.ts  documentation-linker-agent.ts  documentation.ts  git-history-agent.ts  git-staleness-detector.ts  insight-generation-agent.ts  kg-operators.ts  knowledge-manager.ts  observation-generation-agent.ts  ontology-classification-agent.ts  persistence-agent.ts  quality-assurance-agent.ts  repository-analyzer.ts  semantic-analysis-agent.ts  semantic-analyzer.ts  synchronization.ts  vibe-history-agent.ts  web-search.ts  workflow-report-agent.ts
src/config/: transcript-formats.json
src/events/: workflow-events.ts
src/mock/: llm-mock-service.ts
src/orchestrator/: index.ts  smart-orchestrator.ts
src/storage/: graph-database-adapter.ts
src/types/: agent-dataflow.ts  agent-response.ts  index.ts  trace-types.ts
src/utils/: batch-checkpoint-manager.ts  checkpoint-manager.ts  content-agnostic-analyzer.ts  embedding-cache.ts  filename-generator.ts  filename-tracer.ts  repository-context.ts  serena-code-analyzer.ts  ukb-trace-report.ts  workflow-loader.ts
templates/: analysis_report.md  entity_summary.md  workflow_report.md
workflows/: __init__.py  code_analysis.py  complete_analysis.py  conversation_analysis.py  incremental_analysis.py  repository_analysis.py
